# audio-transcribe

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml  setup.cfg
lib/: compress.py  convert.py  transcribe.py
